# Projektpraktikum

./: README.md  canvas.py  configuration.json  game.py  map.py  objects.py  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  server.py  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/game/: Animated.py  animated.py  backgroundProzess.py  background_music.py  canvas.py  configuration.json  game.py  item.py  map.py  network.py  objects.py  player.py  run.py  server.py  sounds.py  weapon.py
src/game/gamelogic/: animated.py  backgroundProcess.py  backgroundProzess.py  background_music.py  canvas.py  configuration.json  game.py  item.py  map.py  network.py  player.py  run.py  sounds.py  weapon.py  weapon_shot.py
src/game/menu/: MenuSetup.py  MyLabel.py  MyWindow.py  run.py
src/game/server/: server.py  spawnpoints.json
src/menu/: MenuSetup.py  MenuSetupOld.py  MyEntry.py  MyFrame.py  MyLabel.py  MyWindow.py  RunMenu.py
src/server/: server.py  server_with_lobby.py  spawnpoints.json
tests/: temporary_test_to_avoid_error.py  test_MenuSetup.py  test_MyFrame.py  test_MyLabel.py  test_animated.py  test_backgroundProzess.py  test_background_music.py  test_canvas.py  test_game.py  test_item.py  test_map.py  test_my_window.py  test_network.py  test_player.py  test_sounds.py  test_weapon.py  test_weapon_shot.py
